# social-media-api

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
common/: tests.py
social_media/: admin.py  models.py  serializers.py  urls.py  views.py
social_media/migrations/: 0001_initial.py
social_media_api/: settings.py  urls.py
user/: models.py  serializers.py  tests.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_remove_userfollowing_user_id_userfollowing_user.py
